@@ -254,7 +254,6 @@ end
 ---@param options table # Table of options to be applied to the spell
 function base:addSpell(spellGroup, spellList, options)
     local foundSpell = common.getBestSpell(spellList, options, spellGroup)
-    --print(foundSpell.tostring())
     self.spells[spellGroup] = foundSpell
     if not foundSpell then
         logger.info('Could not find spell: \ag%s\ax', spellGroup)
@@ -788,9 +787,9 @@ function base:recover()
     local pct_end = mq.TLO.Me.PctEndurance()
     local combat_state = mq.TLO.Me.CombatState()
     local useAbility = nil
-    --if self.useCommonListProcessor then
-    --    common.processList(self.recoverAbilities, self, true)
-    --else
+    if self.useCommonListProcessor then
+        common.processList(self.recoverAbilities, self, true)
+    else
         for _,ability in ipairs(self.recoverAbilities) do
             if self:isAbilityEnabled(ability.opt) and (not ability.nodmz or not constants.DMZ[mq.TLO.Zone.ID()]) then
                 if ability.mana and pct_mana < (ability.threshold or config.get('RECOVERPCT')) and (ability.combat or combat_state ~= 'COMBAT') and (not ability.minhp or mq.TLO.Me.PctHPs() > ability.minhp) and (ability.ooc or mq.TLO.Me.CombatState() == 'COMBAT') then
@@ -812,7 +811,7 @@ function base:recover()
             if useAbility:use() then state.actionTaken = true end
             if originalTargetID > 0 then mq.cmdf('/squelch /mqtar id %s', originalTargetID) else mq.cmd('/squelch /mqtar clear') end
         end
-    --end
+    end
 end
 
 function base:rez()
@@ -1046,7 +1045,7 @@ function base:mainLoop()
         -- check whether we need to go chasing after the chase target, may happen while fighting
         common.checkChase()
     end
-    if mode.currentMode:isPullMode() and not self:hold() and not state.lootBeforePull then
+    if not state.actionTaken and not state.medding and mode.currentMode:isPullMode() and not self:hold() and not state.lootBeforePull then
         pull.pullMob()
     end
 end
