@@ -115,7 +115,7 @@ function common.getItem(itemName, options)
 end
 
 function common.getSkill(name, options)
-    if not mq.TLO.Me.Ability(name) or not mq.TLO.Me.Skill(name)() or mq.TLO.Me.Skill(name)() == 0 then return nil end
+    if not mq.TLO.Me.Ability(name)() or not mq.TLO.Me.Skill(name)() or mq.TLO.Me.Skill(name)() == 0 then return nil end
     if not options then options = {} end
     local spellData = {Name=name}
     for key,value in pairs(options) do
@@ -352,30 +352,31 @@ function common.checkMana()
     end
 end
 
-local sitTimer = timer:new(10000)
 ---Sit down to med if the conditions for resting are met.
 function common.rest()
     if not config.get('MEDCOMBAT') and (mq.TLO.Me.CombatState() == 'COMBAT' or state.assistMobID ~= 0) then return end
     if state.mobCount > 0 and (mode.currentMode:isTankMode() or mq.TLO.Group.MainTank() == mq.TLO.Me.CleanName() or config.get('MAINTANK')) then return end
     -- try to avoid just constant stand/sit, mainly for dumb bard sitting between every song
-    if sitTimer:timerExpired() then
+    if state.sitTimer:timerExpired() then
         if mq.TLO.Me.PctHPs() < config.get('MEDHPSTART') then
             state.medding = true
+            if not mq.TLO.Target() then mq.TLO.Me.DoTarget() end
         end
         if (mq.TLO.Me.Class.CanCast() and mq.TLO.Me.PctMana() < config.get('MEDMANASTART')) or mq.TLO.Me.PctEndurance() < config.get('MEDENDSTART') then
             state.medding = true
+            if not mq.TLO.Target() then mq.TLO.Me.DoTarget() end
         end
-        if not mq.TLO.Me.Sitting() and not mq.TLO.Me.Moving() and not mq.TLO.Me.Casting() and state.medding then
+        if not mq.TLO.Me.Sitting() and not mq.TLO.Me.Moving() and not mq.TLO.Me.Casting() and not state.casting and state.medding then
                 --and not mq.TLO.Me.Combat() and not mq.TLO.Me.AutoFire() and
                 --mq.TLO.SpawnCount(string.format('xtarhater radius %d zradius 50', config.get('CAMPRADIUS')))() == 0 then
             mq.cmd('/sit')
-            sitTimer:reset()
+            state.sitTimer:reset()
         end
     end
     if mq.TLO.Me.Class.CanCast() then
-        if mq.TLO.Me.PctMana() > 85 then state.medding = false end
+        if mq.TLO.Me.PctMana() > config.get('MEDMANASTOP') then state.medding = false end
     else
-        if mq.TLO.Me.PctEndurance() > 85 then state.medding = false end
+        if mq.TLO.Me.PctEndurance() > config.get('MEDENDSTOP') then state.medding = false end
     end
 end
 
