@@ -83,10 +83,11 @@ local function buffSelf(base)
         else
             local canCast = abilities.IsReady.CAN_CAST
             if buff.CastType == abilities.Types.Spell then
+                -- why is this check here? its called in abilities.use again. Maybe trying to prevent targeting if canUseSpell fails?
                 local spell = mq.TLO.Spell(buff.Name)
                 canCast = abilities.canUseSpell(spell, buff)
             end
-            if (buff.enabled == nil or buff.enabled) and  canCast == abilities.IsReady.CAN_CAST and not haveBuff(buffName) and not haveBuff(buff.CheckFor)
+            if (buff.enabled == nil or buff.enabled) and (canCast == abilities.IsReady.CAN_CAST or canCast == abilities.IsReady.NOT_MEMMED) and not haveBuff(buffName) and not haveBuff(buff.CheckFor)
                     and mq.TLO.Spell(buff.CheckFor or buff.Name).Stacks() and (not buff.nodmz or not constants.DMZ[mq.TLO.Zone.ID()])
                     and (not buff.skipifbuff or not mq.TLO.Me.Buff(buff.skipifbuff)()) then
                 if buff.TargetType == 'Single' then mq.TLO.Me.DoTarget() end
